RESOLVED FIXED72570
AX: cleanup style and naming and code in accessibility search mechanism
https://bugs.webkit.org/show_bug.cgi?id=72570
Summary AX: cleanup style and naming and code in accessibility search mechanism
chris fleizach
Reported 2011-11-16 17:40:43 PST
Original implementation was done by an intern. I think the naming and coding need to be improved and shaped
Attachments
patch (14.49 KB, patch)
2011-11-16 17:58 PST, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2011-11-16 17:58:18 PST
Beth Dakin
Comment 2 2011-11-17 11:49:14 PST
Comment on attachment 115497 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=115497&action=review Definite improvement! > Source/WebCore/accessibility/AccessibilityObject.cpp:-333 > - ASSERT(AXObjectCache::accessibilityEnabled()); Did you mean to remove this assertion? If so, why?
chris fleizach
Comment 3 2011-11-17 11:52:24 PST
(In reply to comment #2) > (From update of attachment 115497 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=115497&action=review > > Definite improvement! > > > Source/WebCore/accessibility/AccessibilityObject.cpp:-333 > > - ASSERT(AXObjectCache::accessibilityEnabled()); > > Did you mean to remove this assertion? If so, why? I don't really know why it was added in the first place. I definitely should have told the intern to remove it. Asserting that is true is quite meaningless. No one will use this method unless it's been triggered through an existing accessibility mechanism (which means that accessibility is already enabled)... This method is really no different than any other method, so it doesn't harm anything to have it there, but it makes it confusing as to why it's there
Beth Dakin
Comment 4 2011-11-17 11:55:22 PST
(In reply to comment #3) > (In reply to comment #2) > > (From update of attachment 115497 [details] [details]) > > View in context: https://bugs.webkit.org/attachment.cgi?id=115497&action=review > > > > Definite improvement! > > > > > Source/WebCore/accessibility/AccessibilityObject.cpp:-333 > > > - ASSERT(AXObjectCache::accessibilityEnabled()); > > > > Did you mean to remove this assertion? If so, why? > > I don't really know why it was added in the first place. I definitely should have told the intern to remove it. > > Asserting that is true is quite meaningless. > > No one will use this method unless it's been triggered through an existing accessibility mechanism (which means that accessibility is already enabled)... > > This method is really no different than any other method, so it doesn't harm anything to have it there, but it makes it confusing as to why it's there Makes sense!
chris fleizach
Comment 5 2011-11-17 13:16:15 PST
Note You need to log in before you can comment on or make changes to this bug.