AX: cleanup style and naming and code in accessibility search mechanism https://bugs.webkit.org/show_bug.cgi?id=72570

Reviewed by Beth Dakin.

Cleanup the naming and code style within the element searching mechanism.

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isAccessibilityObjectSearchMatch):
(WebCore::AccessibilityObject::isAccessibilityTextSearchMatch):
(WebCore::AccessibilityObject::firstAccessibleObjectFromNode):
(WebCore::AccessibilityObject::findMatchingObjects):
* accessibility/AccessibilityObject.h:
* accessibility/mac/WebAccessibilityObjectWrapper.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]):



Canonical link: https://commits.webkit.org/89164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100662 268f45cc-cd09-0410-ab3c-d52691b4dbfc